tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/int_as_constraint.essence:3:11:
  |
3 | such that x
  |           ^
Type Error: Integer variable 'x' used in boolean context

tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/int_as_constraint.essence:4:11:
  |
4 | such that y
  |           ^
Type Error: Integer variable 'y' used in boolean context